--- a/milestones/milestone-02/Cargo.toml
+++ b/milestones/milestone-02/Cargo.toml
@@ -1,12 +1,14 @@
 [package]
-name = "milestone-01"
+name = "milestone-02"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 model = { path = "../../model" }
-game = { path = "../../game" }
+resources = { path = "../../resources" }
 construction = { path = "../../construction" }
+influence = { path = "../../influence" }
 connection = { path = "../../connection" }
+hud = { path = "../../hud" }
 
 bevy = "0.7.0"
