--- a/milestones/milestone-02/Cargo.toml
+++ b/milestones/milestone-02/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 model = { path = "../../model" }
+game = { path = "../../game" }
 resources = { path = "../../resources" }
 construction = { path = "../../construction" }
 influence = { path = "../../influence" }
