--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -5,5 +5,11 @@ edition = "2021"
 
 [dependencies]
 model = { path = "../model" }
+resources = { path = "../resources" }
+construction = { path = "../construction" }
+influence = { path = "../influence" }
+connection = { path = "../connection" }
+hud = { path = "../hud" }
+collision = { path = "../collision" }
 
 bevy = "0.7.0"
