Upgrade to bevy 0.8

--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -12,4 +12,4 @@ connection = { path = "../connection" }
 hud = { path = "../hud" }
 collision = { path = "../collision" }
 
-bevy = "0.7.0"
+bevy = { version = "0.8.0", default-features = false, features = ["render"] }
