--- a/collision/Cargo.toml
+++ b/collision/Cargo.toml
@@ -7,4 +7,4 @@ edition = "2021"
 model = { path = "../model" }
 logic = { path = "../logic" }
 
-bevy = "0.7.0"
+bevy = { version = "0.8.0", default-features = false }
