--- a/connection/Cargo.toml
+++ b/connection/Cargo.toml
@@ -6,5 +6,5 @@ edition = "2021"
 [dependencies]
 model = { path = "../model" }
 
-bevy = "0.7.0"
-bevy_prototype_lyon = "0.5.0"
+bevy = { version = "0.8.0", default-features = false }
+bevy_prototype_lyon = "0.6.0"
