Clean up and move code from game module to logic module

--- a/game/Cargo.toml
+++ b/game/Cargo.toml
@@ -11,5 +11,6 @@ influence = { path = "../influence" }
 connection = { path = "../connection" }
 hud = { path = "../hud" }
 collision = { path = "../collision" }
+logic = { path = "../logic" }
 
 bevy = { version = "0.8.0", default-features = false, features = ["render"] }
