--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ members = [
     "milestones/milestone-01",
     "milestones/milestone-02",
     "milestones/milestone-03",
+    "milestones/milestone-04",
 ]
 
 # Enable a small amount of optimization in debug mode
